[tool.poetry]
name = "HDBSCAN_RADICL_peak"
version = "0.0.1"
description = "Finding peaks "
authors = ["Vipin Kumar <princeps091@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
pathlib = "^1.0.1"
hdbscan = "^0.8.29"
bioframe = "^0.4.0"
pandas = "^2.0.0"
altair = "^4.2.2"
ibis = "^3.2.0"
networkx = {extras = ["default"], version = "^3.1"}
statsmodels = "^0.13.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
